feat: получение компаний с задолженностью в 1С
